# letheo

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md
.github/workflows/: ci.yml
bindings/letheo-py/: Cargo.toml  pyproject.toml
bindings/letheo-py/src/: lib.rs
crates/letheo-async/: Cargo.toml
crates/letheo-async/src/: lib.rs
crates/letheo-calibration/: Cargo.toml
crates/letheo-calibration/src/: lib.rs  main.rs
crates/letheo-cli/: Cargo.toml
crates/letheo-cli/src/: lib.rs  main.rs
crates/letheo-core/: Cargo.toml
crates/letheo-core/src/: archetype.rs  entropy.rs  evoke.rs  factstore.rs  lib.rs  modes.rs  perception.rs  reflection.rs  runtime.rs  synthesis.rs  vector.rs
crates/letheo-exec/: Cargo.toml
crates/letheo-exec/src/: lib.rs
crates/letheo-index/: Cargo.toml
crates/letheo-index/src/: lib.rs
crates/letheo-inference/: Cargo.toml
crates/letheo-inference/src/: caching_provider.rs  candle_provider.rs  lib.rs  mock_provider.rs  provider.rs
crates/letheo-mql/: Cargo.toml
crates/letheo-mql/src/: ast.rs  lexer.rs  lib.rs  parser.rs  validate.rs
crates/letheo-persist/: Cargo.toml
crates/letheo-persist/src/: lib.rs
docs/: 01-physics.md  02-mql-grammar.ebnf  03-engine-pipeline.md  04-architecture.md  05-honest-assessment.md  09-whitepaper.md  10-thesis-agents-need-memory.md
orchestration/: pyproject.toml
orchestration/letheo_orchestration/: __init__.py  llm.py  prose.py  session.py  tokens.py
orchestration/letheo_orchestration.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
