[package]
name = "letheo-index"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Índice ANN (HNSW) sobre los modos de los arquetipos — el motor a escala, con Flat como oráculo."

[dependencies]
instant-distance = "0.6.1"
letheo-core = { path = "../letheo-core" }
