[package]
name = "letheo-inference"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Local-first inference: Provider abstraction with deterministic Mock and Candle backends."

[features]
default = []
# La inferencia local real (all-MiniLM-L6-v2 via Candle) se activa con este feature.
candle = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers", "dep:serde_json", "dep:anyhow"]
# Expone `MockProvider` (doble determinista) para los tests de otros crates. NO usar en producto.
testing = []

[dependencies]
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
tokenizers = { version = "0.21", optional = true, default-features = false, features = ["onig"] }
serde_json = { version = "1", optional = true }
anyhow = { version = "1", optional = true }

[lib]
name = "letheo_inference"
path = "src/lib.rs"
