[package]
name = "letheo-persist"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Persistencia local-first: snapshots por sujeto de la memoria de largo plazo (arquetipos)."

[dependencies]
letheo-core = { path = "../letheo-core" }
redb = "4.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "letheo_persist"
path = "src/lib.rs"
